--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 
-/* Pantalla desktop */
-
+/* Pantalla movil */
 header {
     width: 100%;
     background-color: black;
@@ -13,54 +12,43 @@ header {
     margin-bottom: 10px;
 }
 div.menu {
-    display: flex;
-    justify-content: space-between;
     background-color: rgb(119, 119, 129);
     padding: 10px;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
 }
-.menuItem1, .menuItem3 {
-    width: 20%;
+.menuItem1, .menuItem2, .menuItem3 {
     padding: 10px;
+    
     background-color: rgb(230, 118, 118);
     
 }
-.menuItem2 {
-    width: 80%;
-    padding: 10px;
-    margin: 0 10px;
-    background-color: rgb(230, 118, 118);
-}
+ 
 div.title {
     padding: 10px;
+    margin-bottom: 20px;
     background-color: rgb(240, 136, 39);
 }
 div.title div {
     padding: 10px;
+    margin: 10px;
     background-color: rgb(221, 201, 20);
 }
 main {
-    width: 100%;
     background-color: black;
-    display: flex;
     padding: 10px;
     margin-bottom: 10px;
 }
 div.container-content {
-    width: 800px;
-    display: flex;
-    flex-wrap: wrap;
     background-color: rgb(121, 118, 118); 
     padding: 10px;
 }
 .container-content div {
     padding: 10px;
     background-color: rgb(42, 127, 206);
-    flex: 1 1 200px;
+    
     margin: 10px;
 }
 div.side-bar {
-    width: 400px;
     background-color: rgb(235, 80, 80);
     margin-left: 10px;
 }
@@ -83,42 +71,5 @@ footer div {
 /* Pantalla Tablet */
 
 
-@media only screen and (max-width: 800px) {
-    main {
-       flex: 0 1 780px;  
-       flex-wrap: wrap;      
-    }
-    div.container-content {
-        display: flex;
-        flex-wrap: wrap;
-        background-color: rgb(121, 118, 118); 
-        padding: 10px;
-    }
-    .container-content div {
-        padding: 10px;
-        background-color: rgb(42, 127, 206);
-        flex: 1 1 240px;
-        margin: 10px;
-    }
-    div.side-bar {
-        width: 100%;
-        margin-left: initial;
-    }
-    .side-bar div {
-        margin: 10px;
-    }
-}
-/* Pantalla Movil */
-@media only screen and (max-width: 480px) {
-    div.menu {
-       justify-content: center;
-       flex-direction: column; 
-       flex: 1 1 300px;
-    }
-    .menuItem1, .menuItem2, .menuItem3 {
-        width: initial;
-        margin: 10px; 
-        padding: 10px;        
-    }
+
     
-}
